Swagger-autogen dökümantasyonu oluşturuldu. Token cookie'den alınabilir hale getirildi.
